Fixed behaviors on IOS for update and add to home screen

--- a/src/metronome/Metronome.scss
+++ b/src/metronome/Metronome.scss
@@ -131,7 +131,7 @@ input[type="text"] {
 .frequency-container{
     text-align: center;
     & input[type="text"] {
-        width: 90px;
+        width: 110px;
     };
     
 }
